--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.0",
     "express-promise-router": "^2.0.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "pg-promise": "^6.10.1",
+    "sequelize": "^4.11.3"
   }
 }
